add logs + refactoring